Should fix consul